objects/Conga__c.object
<CustomObject>
    <description>Conga Trigger Solutions for Entity Processing Department</description>
    <fields>
        <fullName>Admin_Service_401k_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; + 
&quot;&amp;templateid=a0z0B00000FXc14&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Service - 401k Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Service_401k__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Service - 401k Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Service_PSP_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; + 
&quot;&amp;templateid=a0z0B00000FXbzF&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Service - PSP Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Service_PSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Service - PSP Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certs_and_Ledger_Corp_1_SH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certs and Ledger Corp - 1 SH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certs_and_Ledger_Corp_2_SH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certs and Ledger Corp - 2 SH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certs_and_Ledger_Corp_3_SH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certs and Ledger Corp - 3 SH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certs_and_Ledger_LLC_1_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certs and Ledger - LLC - 1 Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certs_and_Ledger_LLC_2_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certs and Ledger - LLC - 2 Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certs_and_Ledger_LLC_3_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certs and Ledger - LLC - 3 Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certs_and_Ledger_LLC_4_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certs and Ledger- LLC - 4 Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Corp_Digital_Template__c</fullName>
        <formula>Entity__r.Conga_Corp_Digital_Template__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Corp Digital Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Corp_Template__c</fullName>
        <formula>Entity__r.Conga_Template_Selection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Corp Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_LLC_Template_Selection__c</fullName>
        <formula>Entity__r.Conga_LLC_Template_Selection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga LLC Template Selection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Lease_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Agreement Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Member_Managed_Template__c</fullName>
        <formula>Entity__r.Conga_Member_Managed_LLC_Template__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Member Managed Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Trigger_Corporation_Binder__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; +
&quot;&amp;bml=Generating Corporation Binder Documents&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=&quot; + Conga_Corp_Template__c +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Trigger Corporation Binder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Trigger_Lease_Agreement__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000D4Nx2,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; + 
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; + 
&quot;&amp;bml=Generating Lease Agreement&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=a0z0B00000FXNpc&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Trigger Lease Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Restatement_Binder_No_Nom_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK, [SH2]a100B00000DHksG, [SH3]a100B00000DHksa, [SH4]a100B00000DHkwh, [Dir1]a100B00000DHkwr, [Dir2]a100B00000DHl1F, [Dir3]a100B00000DHkxW, [Dir4]a100B00000DHkxb, [Dir5]a100B00000DHkxg, [Dir6]a100B00000DHkxl,&quot; + 
&quot;&amp;bml=Generating Corporation Binder Documents&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=a0z4P00000GTsVc&quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp Restatement Binder No Nom Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Restatement_Binder_Nom_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK, [SH2]a100B00000DHksG, [SH3]a100B00000DHksa, [SH4]a100B00000DHkwh, [Dir1]a100B00000DHkwr, [Dir2]a100B00000DHl1F, [Dir3]a100B00000DHkxW, [Dir4]a100B00000DHkxb, [Dir5]a100B00000DHkxg, [Dir6]a100B00000DHkxl,&quot; + 
&quot;&amp;bml=Generating Corporation Binder Documents&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=a0z4P00000GTsVX&quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp Restatement Binder Nom Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Restatement_Nom_Binder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporation Restatement Binder - Nominee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporation_Binder_Merge_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporation Binder Merge - Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporation_Binder_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporation Binder  Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporation_Restatement_Binder_No_Nom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporation Restatement Binder - No Nom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_Corp_1_SH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Certs and Ledger Corp 1 SH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_Corp_2_SH_Tri__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; +
&quot;&amp;bml=Generating Corporation Binder Documents&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=a0z0B00000FXXyB&quot;+
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Certs and Ledger Corp 2 SH - Tri</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_Corp_2_SH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Certs and Ledger Corp 2 SH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_Corp_3_SH_Tri__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; +
&quot;&amp;bml=Generating Corporation Binder Documents&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=a0z0B00000FXXyG&quot;+
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Certs and Ledger Corp 3 SH - Tri</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_Corp_3_SH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Certs and Ledger Corp 3 SH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_Corp_4_SH_Tri__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; +
&quot;&amp;bml=Generating Corporation Binder Documents&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=a0z0B00000FXXyL&quot;+
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Certs and Ledger Corp 4 SH - Tri</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_Corp_SH_1_Tri__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; +
&quot;&amp;bml=Generating Corporation Binder Documents&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=a0z0B00000FXXy6&quot;+
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Certs and Ledger Corp SH 1 - Tri</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_LLC_1_Mem_Tri__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=a0z0B00000FXXzT&quot;  +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Certs and Ledger LLC - 1 Mem Tri</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_LLC_1_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Certs and Ledger LLC - 1 Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_LLC_2_Mem_Tri__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=a0z0B00000FXXzO&quot;  +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Certs and Ledger LLC - 2 Mem Tri</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_LLC_2_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Certs and Ledger LLC - 2 Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_LLC_3_Mem_Tri__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=a0z0B00000FXXzJ&quot;  +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Certs and Ledger LLC - 3 Mem Tri</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_LLC_3_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Certs and Ledger LLC - 3 Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Certs_and_Ledger_LLC_4_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Certs and Ledger LLC - 4 Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Corp_Binder_Docs_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; + 
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; + 
&quot;&amp;bml=Generating Corporation Binder Documents&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=&quot; + Conga_Corp_Digital_Template__c  +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Corp Binder Docs Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN_Cancellation_Ceased_Op_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; + 
&quot;&amp;templateid=a0z4P00000GTS3L&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN Cancellation - Ceased Op Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN_Cancellation_Ceased_Operations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIN Cancellation - Ceased Operations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Cancellation_Never_Op_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z4P00000GTS3G&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN Cancellation - Never Op Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN_Cancellation_Never_Operational__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIN Cancellation - Never Operational</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Name_Change_Formula__c</fullName>
        <formula>CASE(  Entity__r.Organization_State__c ,
&quot;Alabama&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Alaska&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Arizona&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Arkansas&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;California&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Colorado&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Connecticut&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Delaware&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;District of Columbia&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Florida&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Georgia&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Hawaii&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Idaho&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Illinois&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Indiana&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Iowa&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Kansas&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Kentucky&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Louisiana&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Maine&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Maryland&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Massachusetts&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Michigan&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Minnesota&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Mississippi&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Missouri&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Montana&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Nebraska&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Nevada&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;New Hampshire&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;New Jersey&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;New Mexico&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;New York&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;North Carolina&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;North Dakota&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Ohio&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Oklahoma&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Oregon&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Pennsylvania&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Rhode Island&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;South Carolina&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;South Dakota&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Tennessee&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Texas&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Utah&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;Vermont&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Virginia&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Washington&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;West Virginia&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Wisconsin&quot;, &quot;a0z6f00000RUxcp&quot;,
&quot;Wyoming&quot;, &quot;a0z4P00000GTS3B&quot;,
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN Name Change Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN_Name_Change_Letter_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=&quot; + EIN_Name_Change_Formula__c + &quot; &quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN Name Change Letter Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN_Name_Change_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIN Name Change Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_ID__c</fullName>
        <formula>Entity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipName>Congas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filed_Article_ID_LLC_Mem_Managed_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; + 
&quot;&amp;templateid=a0z0B00000FWvsd&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Article ID LLC Mem Managed Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_AL_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWvvI&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles AL Corp Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_AL_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles AL Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_AL_LLC_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWvvN&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles AL LLC Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_AL_LLC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles AL LLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_AZ_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWw0T&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - AZ - Corp Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_AZ_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - AZ - Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_CA_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWvf5&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - CA - Corp Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_CA_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - CA - Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_CA_LLC_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWvhu&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - CA - LLC Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_CA_LLC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - CA - LLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_DE_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWvhz&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - DE - Corp Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_DE_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - DE - Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_DE_LLC_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWviJ&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - DE - LLC Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_DE_LLC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - DE - LLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_ID_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWviO&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - ID - Corp Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_ID_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - ID - Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_ID_LLC_Man_Man_Trigge__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWvsn&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles ID - LLC - Man Man Trigge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_ID_LLC_Manager_Manage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles ID -LLC - Manager Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_ID_LLC_Member_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles ID - LLC - Member Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_ND_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWw1W&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles ND Corp Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_ND_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles ND Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_ND_LLC_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWw0x&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - ND - LLC Trigger</label>
        <type>Text</type>
    </fields>
</CustomObject>